gap and linebreake fixes

--- a/src/sass/components/LandingPg.sass
+++ b/src/sass/components/LandingPg.sass
@@ -10,9 +10,14 @@ main
   flex-direction: column
   align-items: center
 @media only screen and (min-width: 992px)
+  main
+    padding: 0 2rem
   .main-wrapper
     flex-direction: row
-    gap: 5rem
+    gap: 1rem
     max-width: 1120px
     margin: 0 auto
     padding: 2rem 0
+@media only screen and (min-width: 1120px)
+  .main-wrapper
+    gap: 5rem
