--- a/src/sass/components/Navbar.sass
+++ b/src/sass/components/Navbar.sass
@@ -63,6 +63,7 @@
 
 @media only screen and (min-width: 992px)
   .header
+    padding: 0 2rem
     &-wrapper
       max-width: 1120px
       margin: 0 auto
