--- a/src/sass/components/StepCard.sass
+++ b/src/sass/components/StepCard.sass
@@ -26,6 +26,7 @@
       font-family: t.$Caveat-Brush
       color: c.$main-text
       font-size: 2rem
+      white-space: nowrap
     &--description
       color: c.$main-text
       line-height: 1.5rem
